# smartctl-rs

./: Cargo.toml  LICENSE  README.md
src/: device.rs  error.rs  lib.rs  scan.rs
tests/fixtures/: hdd.json  nvme0.json  perm.json  sata-ssd.json  scan.json
