[package]
name = "smartctl-rs"
version = "0.2.0"
edition = "2024"
description = "A Rust library for interfacing with smartctl."
license = "MIT"
repository = "https://github.com/einstein8612/smartctl-rs.git"
authors = ["Joey <joey@joeyli.dev>"]

[dependencies]
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.148"
thiserror = "2.0.17"
